# vandapy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: modules.rst  vandapy.rst
src/vandapy/: __init__.py  vandapy.py
tests/: test_function.ipynb  test_vandapy.py
