[tool.poetry]
name = "vandapy"
version = "0.1.0"
description = "Easily retrieve information from the Victoria & Albert Musuem API!"
authors = ["Timothy Ng "]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"
numpy = "^1.23.5"
pytest = "^7.2.0"
sphinxcontrib-napoleon = "^0.7"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
sphinx = "^5.3.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
